--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "dotenv": "^10.0.0",
     "joi": "^17.4.2",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "pg": "^8.7.1"
   }
 }
