📝 add server configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# server configuration
+HOST=<server host>
+PORT=<server port>
+
+# node-postgres configuration
 PGUSER=<postgres user>
 PGHOST=<postgres host>
 PGPASSWORD=<postgres password>
