--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,16 @@
   "rules": {
     "no-console": "off",
     "no-underscore-dangle": "off",
-    "global-require": "off"
+    "global-require": "off",
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "never"
+      }
+    ]
   }
 }
