--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "no-console": "off",
     "no-underscore-dangle": "off",
     "global-require": "off",
+    "operator-linebreak": "off",
     "comma-dangle": [
       "error",
       {
