--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ PGHOST=<postgres host>
 PGPASSWORD=<postgres password>
 PGDATABASE=<postgres database>
 PGPORT=<postgres post>
+
+# jwt token
+ACCESS_TOKEN_KEY=<jwt access token key>
+REFRESH_TOKEN_KEY=<jwt refresh token key>
