--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ PGPORT=<postgres post>
 # jwt token
 ACCESS_TOKEN_KEY=<jwt access token key>
 REFRESH_TOKEN_KEY=<jwt refresh token key>
+ACCESS_TOKEN_AGE=<jwt access token age in seconds>
