📝 add rabbitmq server

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ PGPORT=<postgres post>
 ACCESS_TOKEN_KEY=<jwt access token key>
 REFRESH_TOKEN_KEY=<jwt refresh token key>
 ACCESS_TOKEN_AGE=<jwt access token age in seconds>
+
+# message broker rabbitmq
+RABBITMQ_SERVER=<rabbitmq connection server>
