--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "@hapi/inert": "^6.0.4",
     "@hapi/jwt": "^2.1.0",
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
