--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ ACCESS_TOKEN_AGE=<jwt access token age in seconds>
 
 # message broker rabbitmq
 RABBITMQ_SERVER=<rabbitmq connection server>
+
+# aws-sdk
+AWS_ACCESS_KEY_ID=<access key id aws>
+AWS_SECRET_ACCESS_KEY=<secret access key aws>
+AWS_BUCKET_NAME=<aws s3 bucket name>
