--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hapi/inert": "^6.0.4",
     "@hapi/jwt": "^2.1.0",
     "amqplib": "^0.8.0",
+    "aws-sdk": "^2.1014.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
