👔 server-side caching implemented

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ RABBITMQ_SERVER=<rabbitmq connection server>
 AWS_ACCESS_KEY_ID=<access key id aws>
 AWS_SECRET_ACCESS_KEY=<secret access key aws>
 AWS_BUCKET_NAME=<aws s3 bucket name>
+
+# redis
+REDIS_SERVER=<redis host server>
