--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "joi": "^17.4.2",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^6.0.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "redis": "^3.1.2"
   }
 }
